---
source: crates/tests/databases-tests/src/postgres/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  coalesce(json_agg("%6_universe_agg"."universe"), '[]') AS "universe"
FROM
  (
    SELECT
      row_to_json("%3_universe") AS "universe"
    FROM
      jsonb_to_recordset($1) AS "%0_%variables_table"("%variable_order" "int4", "%variables" "jsonb")
      CROSS JOIN LATERAL (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%4_rows")), '[]') AS "rows"
            FROM
              (
                SELECT
                  "%2_Album"."Title" AS "Title"
                FROM
                  (
                    SELECT
                      "%1_Album".*
                    FROM
                      "public"."Album" AS "%1_Album"
                    WHERE
                      (
                        "%1_Album"."Title" ~~ cast(
                          (
                            ("%0_%variables_table"."%variables" -> $2) #>> cast(ARRAY [] as "text"[])) as "pg_catalog"."varchar")) ORDER BY "%1_Album"."AlbumId" ASC ) AS "%2_Album") AS "%4_rows") AS "%4_rows") AS "%3_universe" ORDER BY "%0_%variables_table"."%variable_order" ASC ) AS "%6_universe_agg"
